Fix window resize on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,8 +564,12 @@ strong {
     padding: 0px 10px;
   }
 
+  .coding-skills td {
+
+  }
+
   .coding-icon {
-    width: 100%;
+    width: 60%;
     height: auto;
     padding-left: 0.1em;
     padding-top: 0.1em;
